reconcile espn players names to match sportsradar api names

--- a/private/assets/readme
+++ b/private/assets/readme
@@ -1,2 +1,17 @@
 nfl_player_data_espn_2015
 	-file used for updating ESPN ID after using the SportsRadara API to seed the nflPlayers database
+
+
+Players changed
+Steve Smith, Sr. 
+Terrance Magee
+Robert Griffin III
+Benny Cunningham
+Philly Brown
+Tim Wright
+DuJuan Harris
+Matt Slater
+Emmanuel Bibbs
+Duke Johnson
+Melvin Gordon III
+Chris Johnson
